# becs

./: README.md
becs/: CMakeLists.txt  becs.cc  becs.cpp  becs.h  becs.hh  build.ps1
becs/include/: test.hh
becs/src/: test.cc
